--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
  </head>
 <body><font size="4.5">
-<img src="../images/Header-Stickers5.jpg" width="424" height="125">
-<img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
+<img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
+<img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <center style="font-size:19;"><b>
@@ -19,7 +19,7 @@
 </b></center>
 <br>
 </div>
-<center><img src="../images/Admin-Block.jpg" width="900"></center>
+<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="20" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
@@ -30,7 +30,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-<center><img src="IMG_20220513_151240.jpg" width="950">
+<center><img src="IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="950">
 <br><br></center>
   <center><h2 style="color:Brown">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
@@ -52,26 +52,26 @@
 <br></div><br><br>
   <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
     <marquee behavior="alternate" direction="left" scrollamount="17">
-      <img src="../images/footer-slider13-150x150.jpg" width="250">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.png" width="300">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.png" width="300" >
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.png" width="300" >
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.jpg" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.jpg" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.jpg"  width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" width="300" height="249">
+      <img src="../images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.png"  alt="footer-slider9-150x150.png" width="300">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.png" alt="footer-slider6-150x150.png"  width="300" >
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300" >
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.jpg"  alt="Industry-Institution-Partnership-Thumbnail" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.jpg"  alt="Aakash-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
     </marquee></div>
 <br><br>
   <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Logo-9.jpg" width="237" height="194">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/CTS.jpg" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/sib.jpg" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.jpg" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.jpg" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" alt="infosys" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" alt="TCS" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Logo-9.jpg"  alt="ibs" width="237" height="194">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/CTS.jpg"   alt="CTS" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/sib.jpg" alt="sib" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.jpg" alt="Envestnet" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.jpg" alt="EY " width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" alt="UST" width="237" height="210">
 </marquee></div>
 <br><br><br><br></font>
   <div class="topnav" style="background-color:lightblue;border:9px solid lightblue;" align="left" width="500">
