--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
 &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
 &emsp;&ensp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
-&emsp;&ensp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
+&emsp;&ensp;<a href="https://saintgits.org/placement/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
 &emsp;&ensp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
 </b></center>
 <br>
