--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-group-of-institution/" target="_blank" style="color:blue;text-decoration:none;">About us<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/group-home/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="color:blue;text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="color:blue;text-decoration:none;">Anti-Ragging Policy <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="color:blue;text-decoration:none;">Saintgits Center for Innovation<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="color:blue;text-decoration:none;">Infosys Campus Connect <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="color:blue;text-decoration:none;">Industry Institution Partnership<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/group-home/affiliations-and-accreditations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations & Accreditations<br></a><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/group-home/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accreditations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations & Accreditations<br></a><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
     <left><h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
 &nbsp;&nbsp;<b style="color:orangered;" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
