--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
-<link rel="canonical" href="{{ https://saintgits-mca.tk/ }}" />
+<link rel="canonical" href="{{ https://saintgits-mca.github.io/ }}" />
  </head>
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
