--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <br><br><br><br></font>
   <div class="topnav" style="background-color:lightblue;border:9px solid lightblue;" align="left" width="500">
 <br><h3 style="color:black"><b style="font-family:arial">&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/saintgits-group-of-institution/" target="_blank" style="color:blue;text-decoration:none;">About us<br></a><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="color:blue;text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
