--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
 <link rel="canonical" href="https://saintgits-mca.github.io/" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="title" content="Saintgits MCA Department">
+<meta name="description" content="Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.">
+<meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA,Saintgits MCA Department, saintgits mca department, saintgits mca github">
+<meta name="language" content="English">
  </head>
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
