--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="20" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
-<h1 style="color:brown;font-family:arial" align="center"><b>Master Of Computer Applications Department</b></h1>
+<h1 style="color:brown;" align="center"><b>Master Of Computer Applications Department</b></h1>
 <center><p style="color:red">============<p1 style="color:blue">=============</p1></p></center>
 
  <p align="justify">The Institute of Computer Application was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
@@ -38,7 +38,7 @@
 <br><br>
 <center><img src="IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="950">
 <br><br></center>
-  <center><h2 style="color:Brown;font-family:Arial">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
+  <center><h2 style="color:Brown;">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
 <p align="justify">MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</p><br><br>
 <b><ul style="list-style-type:square">Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -68,7 +68,7 @@
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
     </marquee></div>
 <br><br>
-  <br><center><h2 style="font-family:arial">Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" width="237" height="210">
+  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" alt="infosys" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" alt="TCS" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
@@ -81,7 +81,7 @@
 </marquee></div>
 <br><br><br><br></font>
   <div class="topnav" style="background-color:lightblue;border:9px solid lightblue;" align="left" width="500">
-<br><h3 style="color:black"><b style="font-family:arial">&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
+<br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
@@ -94,7 +94,7 @@
 &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations & Accreditations<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
-    <left><h3><b style="font-family:arial">&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
+    <left><h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
 &nbsp;&nbsp;<b style="color:orangered;" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
 <i style="color:green" align="justify">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
