--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 <h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
 <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
 &nbsp;&nbsp;Admissions Officer<br>
-&nbsp;&nbsp;+91 9961672222<br>
+&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
 <i>&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br></i>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
