--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 &nbsp;&nbsp;<b style="color:orangered;" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
 <i style="color:green" align="justify">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
-&nbsp;&nbsp;Tel: +91 481 2430349, 2436169, 2436170 <br>
+&nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:green;text-decoration:none"> +91 481 2430349</a>, <a href="tel:2436169" style="color:green;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:green;text-decoration:none">2436170</a> <br>
 &nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:green;text-decoration:none">mail@saintgits.org</a> </i></left>
 <br><br></i>
 <h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
