--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <center><img src="../images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="947" height="337"></center><br>
 <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
     <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
-<h3><a href="https://saintgits.org/mca-college/mca-admission/" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
+<h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
 <br></div><br><br>
   <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
     <marquee behavior="alternate" direction="left" scrollamount="17">
