--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
     </marquee></div>
 <br><br>
-  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" width="237" height="210">
+  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" alt="Wipro" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" alt="infosys" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" alt="TCS" width="237" height="210">
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
