--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
 <link rel="canonical" href="https://saintgits-mca.github.io/" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="title" content="Saintgits MCA Department">
 <meta name="description" content="Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.">
