--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-<center><img src="IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="950">
+<center><img src="../images/footer-slider11.png" alt="Saintgits Edge"  width="950">
 <br><br></center>
   <center><h2 style="color:Brown;">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
@@ -51,7 +51,7 @@
   <br>
 
 <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70">
-<center><img src="../images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="947" height="337"></center><br>
+<center><img src="../images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768" height="237"></center><br>
 <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
     <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
 <h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
