--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-  <center><img src="../Saintgits-Edge.png" alt="Saintgits Edge"  width="711" height="85">
-<br></center>
+  &emsp;&emsp;<img src="../Saintgits-Edge.png" alt="Saintgits Edge"  width="711" height="85">
+<br><br>
 <center><img src="../images/footer-slider11.png" alt="Saintgits Edge"  width="950">
 <br><br></center>
   <center><h2 style="color:Brown;">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
