--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-  &emsp;&emsp;<img src="../Saintgits-Edge.png" alt="Saintgits Edge"  width="711" height="85">
+  &emsp;<img src="../Saintgits-Edge.png" alt="Saintgits Edge"  width="711" height="85">
 <br><br>
 <center><img src="../images/footer-slider11.png" alt="Saintgits Edge"  width="950">
 <br><br></center>
