--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-  <center>&emsp;<img src="../images/Saintgits-Edge.png" alt="Saintgits Edge"  width="982" height="310"></center>
+  &emsp;<img src="../images/Saintgits-Edge.png" alt="Saintgits Edge"  width="982" height="310">
 <br><br>
   <center><h2 style="color:Brown;">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
