--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" alt="UST" width="237" height="210">
 </marquee></div>
 <br><br><br><br></font>
-  <div class="topnav" style="background-color:lightblue;border:9px solid lightblue;" align="left" width="500">
+    <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500">
 <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
@@ -93,25 +93,21 @@
 &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations & Accreditations<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
-
-    <left><h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
-&nbsp;&nbsp;<b style="color:orangered;" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
-<i style="color:green" align="justify">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
+   <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
+&nbsp;&nbsp;<b style="color:orangered;" text-align="justify" >SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
+<p  style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
-&nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:green;text-decoration:none"> +91 481 2430349</a>, <a href="tel:2436169" style="color:green;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:green;text-decoration:none">2436170</a> <br>
-&nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:green;text-decoration:none">mail@saintgits.org</a> </i></left>
-<br><br></i>
-<h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
-<b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
+&nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:navy;text-decoration:none" > +91 481 2430349</a>, <a href="tel:2436169" style="color:navy;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:navy;text-decoration:none">2436170</a> <br>
+&nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:navy;text-decoration:none" >mail@saintgits.org</a> 
+<br></p>
+<h4 style="color:brown" ><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
+<b >&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
 &nbsp;&nbsp;Admissions Officer<br>
-&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
-<i>&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br></i>
+&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none" >+91 9961672222</a><br>
+&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none" >ansu.mc@saintgits.org</a><br><br>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  </div>
-
-
-
 </body></html>
