--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </b></center>
 <br>
 </div>
-<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900"></center>
+<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="701"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="15" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
