--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 &nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:navy;text-decoration:none" >mail@saintgits.org</a> 
 <br></p>
 <h4 style="color:brown" ><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
-<b >&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
-&nbsp;&nbsp;Admissions Officer<br>
-&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none" >+91 9961672222</a><br>
-&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none" >ansu.mc@saintgits.org</a><br><br>
+<b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
+&nbsp;&nbsp;<p style="color:navy">Admissions Officer</p><br>
+&nbsp;&nbsp;<a href="tel:+919961672222" style="color:navy;text-decoration:none" >+91 9961672222</a><br>
+&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:navy;text-decoration:none" >ansu.mc@saintgits.org</a><br><br>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
