--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department</title>
-<link rel="icon" href="https://saintgits-mca.github.io/images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
+<link rel="icon" href="..images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
 <link rel="canonical" href="https://saintgits-mca.github.io/" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="title" content="Saintgits MCA Department">
@@ -11,12 +11,12 @@
 <meta name="language" content="English">
  </head>
 <body><font size="4.5">
-<img src="https://saintgits-mca.github.io/images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
-<img src="https://saintgits-mca.github.io/images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
+<img src="..images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
+<img src="..images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <center style="font-size:19;"><b>
-&ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
+&ensp;<a href="https://saintgits-mca.github.io/" style="color:snow;text-decoration:none;">Home</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
 &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
@@ -26,7 +26,7 @@
 </b></center>
 <br>
 </div>
-<center><img src="https://saintgits-mca.github.io/images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="300"></center>
+<center><img src="..images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="300"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="15" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
@@ -37,7 +37,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-  &emsp;&nbsp;<img src="https://saintgits-mca.github.io/IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="720" height="600">
+  &emsp;&nbsp;<img src="..IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="720" height="600">
 <br><br>
   <center><h2 style="color:Brown;">O u r  &nbsp; &nbsp; C o u r s e s</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
@@ -52,33 +52,33 @@
   <br>
 
 <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70">
-<center><img src="https://saintgits-mca.github.io/images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768" height="237"></center><br>
+<center><img src="..images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768" height="237"></center><br>
 <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
     <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
 <h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
 <br></div><br><br>
   <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
     <marquee behavior="alternate" direction="left" scrollamount="17">
-      <img src="https://saintgits-mca.github.io/images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/footer-slider9-150x150.png"  alt="footer-slider9-150x150.png" width="300">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/footer-slider6.png" alt="footer-slider6-150x150.png"  width="300" >
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300" >
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Industry-Institution-Partnership-Thumbnail.jpg"  alt="Industry-Institution-Partnership-Thumbnail" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Aakash-Thumb.jpg"  alt="Aakash-Thumb" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
+      <img src="..images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider9-150x150.png"  alt="footer-slider9-150x150.png" width="300">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider6.png" alt="footer-slider6-150x150.png"  width="300" >
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300" >
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Industry-Institution-Partnership-Thumbnail.jpg"  alt="Industry-Institution-Partnership-Thumbnail" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Aakash-Thumb.jpg"  alt="Aakash-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
     </marquee></div>
 <br><br>
-  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="https://saintgits-mca.github.io/images/Wipro.jpg" alt="Wipro" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/infy.jpg" alt="infosys" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/TCS.jpg" alt="TCS" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Logo-9.jpg"  alt="ibs" width="237" height="194">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/CTS.jpg"   alt="CTS" width="237" height="194">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/sib.jpg" alt="sib" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/Envestnet.jpg" alt="Envestnet" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/EY.jpg" alt="EY " width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="https://saintgits-mca.github.io/images/UST.jpg" alt="UST" width="237" height="210">
+  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="..images/Wipro.jpg" alt="Wipro" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/infy.jpg" alt="infosys" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/TCS.jpg" alt="TCS" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Logo-9.jpg"  alt="ibs" width="237" height="194">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/CTS.jpg"   alt="CTS" width="237" height="194">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/sib.jpg" alt="sib" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Envestnet.jpg" alt="Envestnet" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/EY.jpg" alt="EY " width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/UST.jpg" alt="UST" width="237" height="210">
 </marquee></div>
 <br><br><br><br></font>
     <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500">
